[gd_scene load_steps=6 format=2]

[ext_resource path="res://scripts/delivery/grappling_hook_delivery_tool.gd" type="Script" id=1]
[ext_resource path="res://scenes/components/theter_anchor_moving.tscn" type="PackedScene" id=2]

[sub_resource type="PhysicsMaterial" id=27]
rough = true
absorbent = true

[sub_resource type="SphereShape" id=26]

[sub_resource type="CapsuleMesh" id=29]
radius = 0.025
mid_height = 0.25
radial_segments = 4
rings = 2

[node name="GrapplingHookDeliveryTool" type="Spatial"]
script = ExtResource( 1 )
theter_anchor_path = NodePath("TheterAnchor")
tool_body_path = NodePath("GrapplingHook")

[node name="GrapplingHook" type="RigidBody" parent="."]
collision_layer = 2
collision_mask = 3
mass = 10.0
physics_material_override = SubResource( 27 )
gravity_scale = 0.1
linear_damp = 0.1
angular_damp = 0.1

[node name="Area" type="Area" parent="GrapplingHook"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.05, 0 )

[node name="CollisionShape" type="CollisionShape" parent="GrapplingHook/Area"]
transform = Transform( 0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 0, 0, 0 )
shape = SubResource( 26 )

[node name="Stickpoint" type="Position3D" parent="GrapplingHook"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.05, 0 )

[node name="TheterPoint" type="Position3D" parent="GrapplingHook"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.07, 0 )

[node name="RayCast" type="RayCast" parent="GrapplingHook"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.04, 0 )
cast_to = Vector3( 0, -0.1, 0 )
collision_mask = 2

[node name="MeshInstance4" type="MeshInstance" parent="GrapplingHook"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, -9.31323e-09, 0.08, 0.01 )
mesh = SubResource( 29 )
material/0 = null

[node name="MeshInstance5" type="MeshInstance" parent="GrapplingHook"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -9.31323e-09, -0.04, 0.01 )
mesh = SubResource( 29 )
material/0 = null

[node name="MeshInstance6" type="MeshInstance" parent="GrapplingHook"]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -9.31323e-09, -0.04, 0.01 )
mesh = SubResource( 29 )
material/0 = null

[node name="TheterAnchor" parent="." instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.07, 0 )

[node name="HingeJoint" parent="TheterAnchor" index="0"]
nodes/node_a = NodePath("../../GrapplingHook")

[connection signal="body_entered" from="GrapplingHook/Area" to="." method="_on_body_entered"]
[connection signal="body_exited" from="GrapplingHook/Area" to="." method="_on_body_exited"]

[editable path="TheterAnchor"]
